# STZ

./: .gitignore  CMakeLists.txt  Camera.hpp  Image.hpp  README.md  main.cpp
config/: videoConfigure.yaml
examples/: client_data.py  client_robot.py
include/: camera.hpp  data_forwarder.hpp  image.hpp  logger.hpp  tcp_receiver.hpp  tcp_sender.hpp  tcp_server.hpp  video_sender.hpp
src/: camera.cpp  data_forwarder.cpp  image.cpp  impl.cpp  logger.cpp  main_manager.cpp  main_sender.cpp  tcp_receiver.cpp  tcp_sender.cpp  tcp_server.cpp  video_sender.cpp
